@@ -34,6 +34,8 @@
 #include <signal.h>
 #include <fcntl.h>
 #include <unistd.h>
+#include <sys/types.h>
+#include <sys/wait.h>
 #include "global.h"	/* pid_t, SIGTYPE, shell, and basename() */
 
 #define	tst(a,b) (*mode == 'r'? (b) : (a))
@@ -41,7 +43,7 @@
 #define	WTR	1
 #define CLOSE_ON_EXEC	1
 
-static char const rcsid[] = "$Id: mypopen.c,v 1.2 2000/04/21 00:11:02 petr Exp $";
+static char const rcsid[] = "$Id: mypopen.c,v 1.1 2000/04/27 16:33:47 petr Exp $";
 
 static pid_t popen_pid[20];
 static SIGTYPE (*tstat)();
